--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
     expose:
       - 27017
     ports:
-      - 2727:27017
+      - 27027:27017
   sfp-backend:
     container_name: sfp-backend
     image: sfp-backend
@@ -42,3 +42,15 @@ services:
     links:
       - db-mongodb
       - db-postgres
+  nginx:
+    image: nginx
+    container_name: nginx
+    volumes:
+      - ../html:/usr/share/nginx/html
+      - ./default.conf:/etc/nginx/conf.d/default.conf
+    expose:
+      - 8085
+    ports:
+    - 8085:8085
+    links:
+      - sfp-backend
