--- a/default.conf
+++ b/default.conf
@@ -1,10 +1,13 @@
+upstream backend {
+    server sfp-backend:8080;
+}
+
 server {
-    listen 8085;
-    listen [::]:8085;
-    server_name localhost;
+    listen 8080;
+    server_name sfp-backend;
 
     location / {
-        proxy_pass       http://sfp-backend:8000;
+        proxy_pass       http://backend;
         proxy_set_header Host      $host;
         proxy_set_header X-Real-IP $remote_addr;
     }
