--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,15 +14,22 @@ spring:
     platform: postgres
     username: postgres
     password: postgres
-
   data:
     mongodb:
       port: 27017
       database: sfp
       host: localhost
       uri: mongodb://localhost:27017/sfp
-
   servlet:
     multipart:
       max-file-size: 20MB
       file-size-threshold: 20MB
+  redis:
+    host: localhost
+    port: 6379
+  session:
+    store-type: redis
+    redis:
+      flush-mode: on_save
+      namespace: sfp
+    timeout: 3600
