--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,12 @@
             <groupId>org.springframework.session</groupId>
             <artifactId>spring-session-core</artifactId>
         </dependency>
+        <!--Velocity Template-->
+        <dependency>
+            <groupId>org.apache.velocity</groupId>
+            <artifactId>velocity</artifactId>
+            <version>1.7</version>
+        </dependency>
         <!--PostgreSQL-->
         <dependency>
             <groupId>org.postgresql</groupId>
