--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -32,4 +32,27 @@ spring:
     redis:
       flush-mode: on_save
       namespace: sfp
-    timeout: 3600
+  mail:
+    host: smtp.gmail.com
+    port: 587
+    username: slava.vb.bondarchuk@gmail.com
+    password: 050698$$
+    properties:
+      mail:
+        smtp:
+          auth: true
+          connectiontimeout: 5000
+          timeout: 5000
+          writetimeout: 5000
+          starttls:
+            enable: true
+server:
+  undertow:
+    io-threads: 4
+    worker-threads: 4
+  port: 9090
+mail:
+  settings:
+    from: sfp-storage.com
+  activations:
+    address: localhost:8080/sfp/api/users/activate/
